--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "next lint --strict"
+    "test": "next lint"
   },
   "dependencies": {
-    "next": "14.2.10",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next": "15.1.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^9.16.0",
+    "eslint-config-next": "15.1.0"
   }
 }
