--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -10,7 +10,7 @@ jobs:
       - name: use node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18.x'
+          node-version: '22.x'
       - run: npm install
       - run: npm run build
   test: 
@@ -25,3 +25,31 @@ jobs:
           node-version: '22.x'
       - run: npm install
       - run: npm test
+  deploy:
+    needs: test
+    permissions:
+      contents: write
+      pages: write     
+      id-token: write
+    steps:
+      - name: checkout repo
+        uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: use node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22.x'
+      - name: configure github pages
+        uses: actions/configure-pages@v3
+        with:
+          static_site_generator: next
+      - run: npm install
+      - run: npm run build
+      - name: upload artifacts
+        uses: actions/upload-pages-artifact@v1
+        with: 
+          path: "./out"
+      - name: deploy
+        id: deployment
+        uses: actions/deploy-pages@v1
