--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -27,6 +27,7 @@ jobs:
       - run: npm test
   deploy:
     needs: test
+    runs-on: ubuntu-latest
     permissions:
       contents: write
       pages: write     
