Add productin environment

--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -32,6 +32,9 @@ jobs:
       contents: write
       pages: write     
       id-token: write
+    environment:
+      name: production
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - name: checkout repo
         uses: actions/checkout@v3
